--- a/angular.json
+++ b/angular.json
@@ -32,8 +32,10 @@
               
             ],
             "styles": [
+              "node_modules/@nebular/theme/styles/prebuilt/default.css",
              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.scss"
+            
             ],
             "scripts": []
           },
