--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^18.2.0",
+    "@angular/animations": "^18.2.11",
+    "@angular/cdk": "^18.2.12",
     "@angular/common": "^18.2.0",
     "@angular/compiler": "^18.2.0",
     "@angular/core": "^18.2.0",
@@ -19,9 +20,12 @@
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@dchtools/ngx-loading-v18": "^1.0.5",
+    "@nebular/eva-icons": "^14.0.2",
+    "@nebular/theme": "^14.0.2",
     "@ng-bootstrap/ng-bootstrap": "^17.0.1",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
+    "eva-icons": "^1.1.3",
     "express": "^4.21.1",
     "libphonenumber-js": "^1.11.13",
     "rxjs": "~7.8.0",
